# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--arch@arch.thinkmo.de--2003-archives/moin--main--1.5
#

2006-04-11 10:00:38 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-553

    Summary:
      updated i18n
    Revision:
      moin--main--1.5--patch-553

    updated i18n
    

    modified files:
     ChangeLog MoinMoin/i18n/bg.po MoinMoin/i18n/bg.py
     MoinMoin/i18n/es.po MoinMoin/i18n/fa.po MoinMoin/i18n/fa.py
     MoinMoin/i18n/ja.po MoinMoin/i18n/ja.py MoinMoin/i18n/lv.po
     MoinMoin/i18n/lv.py


2006-04-10 16:46:41 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-552

    Summary:
      i18n updated
    Revision:
      moin--main--1.5--patch-552

    i18n updated
    

    modified files:
     ChangeLog MoinMoin/i18n/de.po MoinMoin/i18n/es.po
     MoinMoin/i18n/es.py MoinMoin/i18n/fa.po MoinMoin/i18n/fa.py
     MoinMoin/i18n/meta.py


2006-04-10 12:46:51 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-551

    Summary:
      avoid <p> directly after <table> tag
    Revision:
      moin--main--1.5--patch-551

    avoid <p> directly after <table> tag
    

    modified files:
     ChangeLog MoinMoin/parser/wiki.py


2006-04-10 12:27:21 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-550

    Summary:
      updated POTFILES.in + i18n
    Revision:
      moin--main--1.5--patch-550

    updated POTFILES.in + i18n
    

    modified files:
     ChangeLog MoinMoin/i18n/MoinMoin.pot MoinMoin/i18n/POTFILES.in
     MoinMoin/i18n/bg.po MoinMoin/i18n/bg.py MoinMoin/i18n/ca.po
     MoinMoin/i18n/ca.py MoinMoin/i18n/cs.po MoinMoin/i18n/cs.py
     MoinMoin/i18n/da.po MoinMoin/i18n/da.py MoinMoin/i18n/de.po
     MoinMoin/i18n/de.py MoinMoin/i18n/en.po MoinMoin/i18n/en.py
     MoinMoin/i18n/es.po MoinMoin/i18n/es.py MoinMoin/i18n/fa.po
     MoinMoin/i18n/fa.py MoinMoin/i18n/fi.po MoinMoin/i18n/fi.py
     MoinMoin/i18n/fr.po MoinMoin/i18n/fr.py MoinMoin/i18n/he.po
     MoinMoin/i18n/he.py MoinMoin/i18n/hu.po MoinMoin/i18n/hu.py